# duckydd

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  duckydd.conf  duckydd.service  duckydd.toml  gen_configh.sh  getkey.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  codeql-analysis.yml
include/: daemon.h  io.h  logkeys.h  main.h  mbuffer.h  mbuffertemplate.h  signalhandler.h  udev.h  vars.h
src/: daemon.c  io.c  logkeys.c  main.c  mbuffer.c  signalhandler.c  udev.c
